@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007-2008 - TortoiseSVN
+// Copyright (C) 2007-2009 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -63,9 +63,14 @@ bool LogCommand::Execute()
 	{
 		bStrict = TRUE;
 	}
+	CString findStr = parser.GetVal(_T("findstring"));
+	LONG findType = parser.GetLongVal(_T("findtype"));
+	bool findRegex = !parser.HasKey(_T("findtext"));
+
 	CLogDlg dlg;
 	theApp.m_pMainWnd = &dlg;
 	dlg.SetParams(cmdLinePath, pegrev, revstart, revend, limit, bStrict);
+	dlg.SetFilter(findStr, findType, findRegex);
 	dlg.SetIncludeMerge(!!parser.HasKey(_T("merge")));
 	val = parser.GetVal(_T("propspath"));
 	if (!val.IsEmpty())
